# flashtext-i18n

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml
docs/: conf.py
flashtext/: keyword.py
test/: test_cjk_adjacent.py  test_cjk_number.py  test_empty_boundary.py  test_extract_fuzzy_cjk.py  test_extract_sentences.py  test_file_load_json.py  test_i18n_boundaries.py  test_kp_get_all_keywords.py  test_mixed_case.py  test_remove_keywords.py  test_replace_metadata.py  test_underscore.py  test_unicode_span.py
